z-index bug + minor css changes 🎊

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,17 +6,17 @@
   position: absolute !important;
   top: 0;
   left: 0;
-  background-color: #242424;
+  background-color: transparent;
   display: flex;
   height: 100%;
   min-height: 100vh;
   width: 100%;
-  z-index: -1;
+  z-index: 0 !important;
 }
 
 #tsparticles canvas {
   position: absolute !important;
-  z-index: -1 !important;
+  z-index: 0 !important;
   pointer-events: none !important;
   overflow: hidden !important;
 }
