--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,13 @@
 body,
 html {
   margin: 0;
-  /* background-color: #242424; */
+  background-color: #242424;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  z-index: 1;
+  /* z-index: 1; */
   /* width */
 }
 
